<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="presenter"
            type="djordjeh.architecture.mvp.ui.tasks.TasksContract.Presenter"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_tasks"
            android:drawableTop="@drawable/ic_list_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/ic_add_24dp"
            android:onClick="@{()->presenter.addNewTask()}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
